[package]
name = "vessels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder="1.4.3"

[[bin]]
name = "server"
path = "src/bin/server/server.rs"


[[bin]]
name = "client"
path = "src/bin/client/client.rs"